
    If a password authentication is required in order to obtain a Kerberos
    authenticator, return that error in preference to a multifactor
    required error.  This ensures that the password authentication page
    happens first, preserving expected user page flow, and fixes various
    errors and loops caused by detecting this problem after the successful
    second factor authentication.

    mod_webkdc now requires that the return URL in a request token be
    absolute URL and not contain any non-ASCII characters.  The latter
    check avoids error messages and later problems with WebLogin template
    processing.

    Fix the WebLogin replay detection logic to not attempt to trigger
    during password changes, which do not have request tokens.

    Fix logging of mod_webkdc <requestTokenRequest> failures.

    Fix the webauth/webkdc.h header prototype for webauth_user_validate to
    correctly allow the user state parameter to be NULL.

    Log (at the info level) whenever mod_webkdc ignores expired
    webkdc-factor or webkdc-proxy tokens passed to <requestTokenRequest>.

    Display more correct errors after less common failures during the
    second step of a multifactor login.

    Correctly diagnose a missing service token in a WebLogin request and
    return the correct error page rather than an internal error.

WebAuth 4.5.3 (2013-05-15)

    SECURITY: Reset all header contents between WebLogin requests, fixing
    problems introduced in WebAuth 4.4.1 when WebLogin began using a
    persistent CGI::Application object with FastCGI.  WebLogin
    installations that used FastCGI and the $REMUSER_REDIRECT setting in
    webkdc.conf could fail with infinite redirect loops or leak security
    information, such as single sign-on cookies, from one authenticated
    user to another.  (CVE-2013-2106)

WebAuth 4.5.2 (2013-05-14)

    WebLogin now supports preserving the remember_login setting on the